--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,7 @@
 // Home Content
 
 .home {
-
+  
   .intro {
 
     h2 {
@@ -12,6 +12,7 @@
       padding:0 15px;
     }
     img{
+      margin-top: 19vh;
       border-radius: 10px;
       @media @mobile{
         height: 15vh; 
