--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,10 @@
 // Navigation code here
 .navDiv{
     .flexOuterJAD(center, center, column);
+    position: fixed;
+    align-content: center;
+    background: rgba(255, 255, 255, 0.7);
+    
     
     h2{
         text-align: center;
